--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </select>
   </main>
 
-  <footer>© 2025 Awangbam Angang — GitHub Pages</footer>
+  <footer>© ꯲꯰꯲꯵ ꯑꯋꯥꯡꯕ ꯃꯉꯥꯡ</footer>
 
   <script src="script.js"></script>
 </body>
