--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 </head>
 <body>
 
-<header>🔄 Meetei Mayek Text Replacer</header>
+<header>🔄 ꯃꯤꯇꯩ ꯃꯌꯦꯛ ꯋꯥꯍꯩ-ꯋꯥꯇꯥ ꯃꯍꯨꯠ ꯁꯤꯟꯅꯕ</header>
 
 <main>
 
   <!-- Text input/output -->
   <label for="inputText">Paste your text:</label>
-  <textarea id="inputText" placeholder="ꯅꯣꯪ ꯑꯣꯏ ꯅꯣꯪꯔꯤ ..."></textarea>
+  <textarea id="inputText" placeholder="ꯃꯐꯝ ꯑꯁꯤꯗ ꯏꯌꯨ ..."></textarea>
   <button onclick="replaceText()">Replace</button>
   <label for="outputText">Result:</label>
   <textarea id="outputText" readonly placeholder="Result will appear here..."></textarea>
@@ -161,7 +161,7 @@
 
 </main>
 
-<footer>© 2025 Awangbam Angang — GitHub Pages</footer>
+<footer>© ꯲꯰꯲꯵ ꯑꯋꯥꯡꯕ ꯃꯉꯥꯡ </footer>
 
 <script src="script.js"></script>
 <script>
